--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -2656,3 +2656,17 @@ h2.title {
   text-align: center;
   margin-top: 200px;
 }
+
+#orders_success {
+  border: 5px solid #F7F7F0;
+  color: #696763;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  padding: 40px;
+}
+
+#orders_success button {
+  font-family: 'Roboto', sans-serif;
+  color: #696763;
+  margin-top: 20px;
+}
