--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -1658,16 +1658,17 @@ h2.title {
   margin: 15px -70px 10px 25px;
 }
 
-.cart_quantity_button a {
+#plus, #minus {
   background:#F0F0E9;
   color: #696763;
   display: inline-block;
   font-size: 16px;
-  height: 28px;
   overflow: hidden;
   text-align: center;
   width: 35px;
-  float: left;
+  float:left;
+  margin-top: 0px !important;
+  margin-left: 1px;
 }
 
 
@@ -1677,7 +1678,7 @@ h2.title {
   font-size: 16px;
   text-align: center;
   font-family: 'Roboto',sans-serif;
-  
+  height: 35px;
 }
 
 
